--- a/tmpfiles.d/meson.build
+++ b/tmpfiles.d/meson.build
@@ -49,5 +49,5 @@ endforeach
 if enable_tmpfiles
         meson.add_install_script(
                 'sh', '-c',
-                mkdir_p.format(join_paths(sysconfdir, 'tmpfiles.d')))
+                mkdir_p.format(join_paths(factoryconfdir, 'tmpfiles.d')))
 endif
